--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,9 @@ name = "swagger_definition"
 version = "0.1.0"
 authors = ["yarden <yarden.fishler@gmail.com>"]
 edition = "2018"
+license-file = "LICENSE"
 
 [dependencies]
+serde_derive = "1.0.94"
+serde = "1.0.94"
+serde_json = "1.0"
